--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,12 @@
 	width: 50%;
 }
 
+.Form img {
+	height: 150px;
+	width: auto;
+	margin: 10px;
+}
+
 .productImage {
 	height: 40%;
 	width: 80%;
